# MovieDB_api

./: .dockerignore  .gitignore  Dockerfile  helpful_commands.md  poetry_command.md  pyproject.toml  sql_app.db  test.sh
alembic/versions/: 2a56e7089417_create_account_table.py
data_dump/full/: users.csv
data_dump/reduced/: movies_metadata.csv  ratings.csv  users.csv
data_loader/: __init__.py  database.py  dump_params.py  get_data.py  get_posters.py  import_to_db.py  insert_data.py  load_data.py  models.py  read_from_file.py  reduce_datafile.py  reduce_volume.py
data_loader/_only_test/: database.py  models.py
data_loader/data/: movies_metadata_top10.csv  ratings_top.csv
data_loader/dump/: ratings_top.csv  users.csv
env/: .env
myfastapi/: poetry_command.md  pyproject.toml  sql_app.db
myfastapi/src/: model_jwt.py
scripts/: docker-entrypoint.sh  wait_redis_postgres.py
src/_resztka_jwt/: app_jwt.py
src/_smieci/: app_jwt.py  query_test.py  schemas_jwt.py
src/auth/: __init__.py  auth_bearer.py  auth_handler.py
src/consts/: __init__.py  api_const.py  auth_const.py  db_const.py
src/crud/: __init__.py  crud_item.py  crud_movie.py  crud_rate.py  crud_rates.py  crud_user.py
src/database/: __init__.py  dependency.py
src/main/: app.py  app_jwt.py  settings.py
src/models/: __init__.py  item.py  movie.py  rating.py  test.py  user.py
src/rcmmnd/: __init__.py  my_plot.py  rcmmnd.py
src/recommendation/: __init__.py  first.py
src/schemas/: __init__.py  item.py  movie.py  rating.py  user.py
src/services/: omdb.py
src/utilities/: query_util.py  (+1 more)
(+13 files in other folders)
